[package]
name = "prefixtree"
version = "0.1.0"
authors = ["Paul Kirth <pk1574@gmail.com>"]
edition = "2018"

[lib]
name="prefixtree"
path="src/lib.rs"

#[bin]
#name="foo"
#path="src/main.rs"


[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
simple_logger = "1.5.0"
pretty_env_logger = "0.3"
slog-envlogger = "2.2.0"
slog-stdlog = "4"
slog-scope = "4"
lazy_static = "1.4.0"

[dev-dependencies]

